--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="left">
       <h1>Stay updated!</h1>
-      <p class="title">Join 60,000+ product managers receiving monthly <br> updates on:</p>
+      <p class="title">Join 60,000+ product managers receiving monthly updates on:</p>
       <ul class="features">
         <li><img src="./assets/images/icon-list.svg" alt="">Product discovery and building what matters</li>
         <li><img src="./assets/images/icon-list.svg" alt="">Measuring to ensure updates are a success</li>
@@ -32,7 +32,7 @@
         <span>Valid email required</span>
       </div>
       <form action="">
-        <input type="email" name="email" id="email" class="email" placeholder="email@company.com"> 
+        <input type="text" name="email" id="email" class="email" placeholder="email@company.com"> 
         <input type="submit" value="Subscribe to monthly newsletter" class="submit" name="submit">
       </form>
     </div>
